fix banners stretching

--- a/mysite/static/assets/results.scss
+++ b/mysite/static/assets/results.scss
@@ -540,8 +540,10 @@ body {
 
                         img {
                             @media (max-width: 600px) {
-                                max-width: 95%;
-                                height: fit-content;
+                                width: 100%;
+                                height: 10vw;
+                                object-fit: cover;
+                                object-position: left center;
                             }
                             &.light {
                                 display: var(--banner-display-light);
